# ToyMatrix

./: .gitignore  CMakeLists.txt  ToyMatrixConfig.cmake.in  ToyMatrixConfigVersion.cmake.in
Include/: arithmeticex.cpp  arithmeticex.h  exception.h  toymatrix.h  toyvector.h
Src/: ToyMatrix.pro  ToyMatrix_global.h  toymatrix.cpp  toymatrix.h  toymatrix.h.gch
UnitTests/: .gitignore  CMakeLists.txt  TestToyMatrix.cpp  testexceptions.cpp  testtoymatrix.cpp  testtoyvector.cpp
